Link to the upload site from the publication site

--- a/imagen/data/cubes.imagen.css
+++ b/imagen/data/cubes.imagen.css
@@ -72,6 +72,9 @@ select[size] {
     text-align: center;
 }
 
+#div_upload_button {
+    text-align: center;
+}
 
 .bg-warning {
     background-color: #FCF8E3;
